# LotterySampling

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
docs/: new-lottery.tex  parallel-tickets.tex  quality-measures.tex
matlab/: plot_results.m  subplot_tight.m  zipf.m
matlab_experiments/: expectation.m  get_expected_ticket.m  ticket_expectation.m
src/: InputParser.cpp  InputParser.h  Main.cpp  Stats.cpp  Stats.h  main.cpp
src/algorithms/: Algorithm.cpp  Algorithm.h  GenericAlgorithm.cpp  GenericAlgorithm.h  GenericAlgorithm.ipp
src/algorithms/basic_lottery_sampling/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/basic_lottery_sampling_hh/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/basic_lottery_sampling_top_k/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/count_sketch/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/freq_obs/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/frequent/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lossy_counting/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_cache_sampling/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling/: Algorithm.cpp  Algorithm.h  Algorithm.ipp  DataStructures.h  DataStructures.ipp  LotterySampling.cpp  LotterySampling.h  Types.cpp  Types.h
src/algorithms/lottery_sampling_hh/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_lof/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_original/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_parallel/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_v2/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_v2_b/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_sampling_v2_c/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/lottery_space_saving/: Algorithm.h  Algorithm.ipp  Types.h
src/algorithms/space_saving/: Algorithm.cpp  Algorithm.h  Algorithm.ipp  DataStructures.h  SpaceSaving.cpp  SpaceSaving.h  Types.h
src/algorithms/sticky_sampling/: Algorithm.h  Algorithm.ipp  Types.h
src/data_structures/: BinaryHeap.h  BinaryHeap.ipp  FrequencyOrder.h  FrequencyOrder.ipp  List.h  List.ipp  SortedList.h  SortedList.ipp  SortedTree.h  SortedTree.ipp  SortedVector.h  SortedVector.ipp  TicketOrder.h  TicketOrder.ipp
src/utils/: InputParser.cpp  InputParser.h  Misc.cpp  Misc.h  Stats.cpp  Stats.h  Stats.ipp  TicketUtils.cpp  TicketUtils.h
test/: accuracy_metrics.py  binary_builder.py  experiment.py  instance.py  main.py  metrics.py  metrics_builder.py  plot_creator.py  plot_results.m  profiler_utils.py  sorted_list.py  streams.py  tests.py
test/config_files/: config_example_1.json  config_example_2.json
